test/files/neg/bug856.check
bug856.scala:3: error: class ComplexRect needs to be abstract, since method _2 in trait Product2 of type => scala.Double is not defined
class ComplexRect(val _1:double, _2:double) extends Complex {
^
one error found
